# grok-emu

./: .gitignore  Cargo.toml  README.md
grok-6502/: Cargo.toml  LICENSE  README.md  clone_tests.sh  test_opcode
grok-6502/src/: bus.rs  lib.rs  opcodes.rs  tests.rs
grok-80/: Cargo.toml  README.md  test_opcode
grok-80/src/: flags.rs  instructions.rs  lib.rs  main.rs  mcycles.rs  opcode.rs  opcodes.rs  opcodes_cb.rs  test_helpers.rs
grok-80/tests/: cpu.rs
grok-apple2/: Cargo.toml  README.md
grok-apple2/core/: Cargo.toml  LICENSE  README.md
grok-apple2/core/src/io/: game.rs  mod.rs  speaker.rs
grok-apple2/core/src/peripheral/: language.rs
grok-apple2/frontend/: Cargo.toml  README.md
grok-apple2/frontend/src/: main.rs  serial.rs
grok-apple2/src/: apple2.rs  graphics.rs  input.rs  lib.rs  main.rs  mem_manager.rs  memory.rs  sound.rs  wizard_of_woz.rs
grok-apple2/src/disk/: controller.rs  dsk2woz.rs  mod.rs  woz.rs
grok-apple2/src/io/: graphics.rs  keyboard.rs  mod.rs
grok-apple2/src/io/video/: ntsc.rs
grok-apple2/src/peripheral/: language.rs  mod.rs  serial.rs
grok-apple2/src/peripheral/disk/: mod.rs
grok-bus/: Cargo.toml  README.md
grok-bus/src/: lib.rs
grok-cpu/grok-80/: Cargo.toml
grok-cpu/grok-80/src/: flags.rs  instructions.rs  lib.rs  main.rs  opcode.rs
grok-cpu/grok-80/tests/: cpu.rs
grok-dbg/: Cargo.toml  LICENSE  README.md
grok-dbg/src/: lib.rs
grok-spinv/: .gitignore  Cargo.toml  README.md
grok-spinv/sound/: README.txt
grok-spinv/src/: bus.rs  input_reg.rs  main.rs  shift_reg.rs  sound_reg.rs
(+1 files in other folders)
