[package]
name = "grok-80"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kurtjd/grok-emu"

[dependencies]
bitflags = "2.9.1"
num_enum = "0.7.4"
grok-bus = { path = "../grok-bus" }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
rstest = "0.25.0"
