[package]
name = "grok-80"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kurtjd/grok-emu"

[features]
default = ["i8080"]
i8080 = []
i8085 = []
z80 = []
sm83 = []

[dependencies]
bitflags = "2.9.1"
num_enum = "0.7.4"
grok-dbg = { path = "../../grok-dbg" }
grok-bus = { path = "../../grok-bus" }
